<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center_vertical"
        android:background="#2ca8e1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:layout_margin="0dp">

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_gravity="center"
                android:foregroundGravity="center_vertical|center_horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/european"
                    android:checked="false"
                    android:id="@+id/europe"
                    android:textSize="20dp"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/UnitedStatesCapitals"
                    android:id="@+id/unitedStates"
                    android:checked="false"
                    android:textSize="20dp"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/southAmerica"
                    android:id="@+id/southAmerica"
                    android:checked="false"
                    android:textSize="20dp"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/canadian"
                    android:id="@+id/canada"
                    android:checked="false"
                    android:textSize="20dp"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/africa"
                    android:id="@+id/africa"
                    android:checked="false"
                    android:textSize="20dp"/>
            </RadioGroup>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
