<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:gravity="center_vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <Button
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:text="@string/nextButton"
            android:id="@+id/nextButton"
            android:layout_row="6"
            android:layout_column="0"
            android:layout_gravity="center_horizontal"
            android:textSize="20dp"
            android:fontFamily="monospace"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:text="@string/showCapital"
            android:id="@+id/showButton"
            android:layout_row="6"
            android:layout_column="0"
            android:textSize="20dp"
            android:fontFamily="monospace"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <Button
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:text="@string/delete"
            android:id="@+id/deleteButton"
            android:layout_row="6"
            android:layout_column="2"
            android:textSize="20dp"
            android:fontFamily="monospace"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="10dp"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:text="@string/reset"
            android:id="@+id/resetButton"
            android:layout_row="6"
            android:layout_column="2"
            android:layout_gravity="center"
            android:textSize="20dp"
            android:fontFamily="monospace"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"/>
    </LinearLayout>

</LinearLayout>
